# Velocity

./: .gitignore  Cargo.toml  README.md  Rustfmt.toml  build.rs
.circleci/: config.yml
.github/: CODEOWNERS
examples/: hector.rs
src/: app.rs  engine.rs  graphics.rs  http.rs  keyboard.rs  lib.rs  maths.rs  mouse.rs  physics.rs  platform.rs  window.rs
src/core/: maths.rs
src/core/maths/: fuzzy.rs  mat4.rs  point2.rs  point3.rs  quat.rs  scale2.rs  scale3.rs  unit.rs  vec2.rs  vec3.rs
src/graphics/: buffer.rs  camera.rs  pipeline.rs  render_frame.rs  renderer.rs  transform.rs  vertex.rs
src/graphics/shaders/: voxel.frag  voxel.wgsl
src/maths/: angle.rs  bounds3.rs  mat4.rs  point3.rs  quat.rs  scale3.rs  unit.rs  vec2.rs  vec3.rs
src/physics/: aab2.rs  aab3.rs  ray2.rs
