[package]
name    = "game-maths"
version = "0.1.0"
authors = ["Hector Maddock-Greene <rope.hmg@protonmail.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
lto           = true

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
log      = "0.4"
reqwest  = { version = "0.11", features = ["json"] }
serde    = { version = "1", features = ["derive"] }
wgpu     = "0.8"
winit    = "0.25"
