[package]
name    = "velocity"
version = "0.1.0"
authors = ["Hector Maddock-Greene <rope.hmg@protonmail.com>"]
edition = "2018"

[[example]]
name = "hector"

[profile.release]
codegen-units = 1
lto           = true

[dependencies]
bumpalo     = "3.7"
bytemuck    = { version = "1.4", features = [ "derive" ] }
derive_more = "0.99.14"
log         = "0.4"
reqwest     = { version = "0.11", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
wgpu        = "0.8"
winit       = "0.25"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}

[build-dependencies]
# naga for compile time shader compilation
